# msmp-python

./: .gitignore  .gitmodules  CMakeLists.txt  generate.sh  msmp_wrapper.cpp  setup.py
cmake/: FindHeaders.cmake  GitModules.cmake
lib/: CMakeLists.txt  exposed_decl.pypp.txt  hello.cpp  hello.hpp  pylib.cpp  pylib_generator.py.in
msmp_python/: __init__.py  message_broker.py  message_deserializer.py
sample/: main.py  message_a.py  message_a_handler.py  serialized_message.py
sample/tcp_example_1/: main.py  message_a.py  message_a_handler.py
sample/usart_example_1/: main.py  test_message.py  test_message_handler.py
